--- a/style.css
+++ b/style.css
@@ -1,43 +1,64 @@
 body {
   font-family: Arial;
-  padding: 30px 50px 50px 50px;
   box-sizing: border-box;
   background: #f7f7f7;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  height: 100vh;
+  width: 100vw;
+  margin: 0rem;
+  padding: 0rem;
 }
+
 body p {
-  font-size: 20px;
+  font-size: 1.25rem;
 }
 
-.logo {
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  gap: 2rem;
+  padding: 3rem 0rem;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  gap: 1.5rem;
+  list-style: none;
 }
 
-.menu {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 60px;
-  margin: 60px 0px;
-}
-
-.menu a {
+nav ul li a {
+  display: block;
   text-decoration: none;
+  text-transform: uppercase;
+  padding: 1rem 1.25rem;
   color: #000;
+  border: 2px solid transparent;
+  border-radius: 0.25rem;
 }
 
-.grid {
+nav ul li a:hover {
+  border-color: #ee2211;
+}
+
+main {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  margin: 0% 10%;
-  gap: 30px;
+  width: 80vw;
+  gap: 1.875rem;
 }
 
 .box-01 {
   align-self: center;
 }
+
 .box-01 p,
 h1 {
   text-align: end;
@@ -49,58 +70,84 @@ h1 {
 }
 
 .box-01 a {
-  color: white;
+  color: #fff;
   background: #ee2211;
-  padding: 15px 30px;
-  border-radius: 4px;
+  padding: 0.938rem 1.875rem;
+  border-radius: 0.25rem;
   text-decoration: none;
 }
 
+.box-01 a:hover {
+  background: #900;
+  transition: 0.3s;
+}
+
 .box-02 {
+  position: relative;
   align-self: center;
 }
+
 .box-02 img {
   max-width: 100%;
   display: block;
 }
 
+.box-02::before {
+  content: "";
+  display: block;
+  width: 6rem;
+  height: 0.3rem;
+  left: -3rem;
+  top: 3rem;
+  background: red;
+  position: absolute;
+  z-index: 1;
+}
+
 .box-03 {
   align-self: center;
   text-align: end;
-  font-size: 64px;
-  color: #c6c6c6;
+  text-transform: uppercase;
+  font-size: 4rem;
+  color: rgba(0, 0, 0, 0.2);
+  background-image: url("./img/onda.svg");
 }
 
 .box-04 {
   display: flex;
   flex-direction: column;
-  padding: 5% 40% 0% 10%;
-}
 
-.box-04 h2,
-p {
-  text-align: start;
-}
-
-.box-04 img {
-  width: 35px;
+  /* background: lightcoral; */
+  padding: 0rem 14rem 0rem 4.5rem;
 }
 
 .icon-descri {
   display: flex;
-  gap: 15px;
+  gap: 1rem;
+  align-items: center;
   flex-direction: row;
 }
-.icon-descri-text {
-  display: flex;
-  gap: 20px;
-  flex-direction: row;
-  padding-left: 50px;
+
+.icon-descri img {
+  height: 2.5rem;
+}
+
+.row {
+  border-left: 0.25rem solid transparent;
+  padding: 0rem 0rem 0rem 2rem;
+}
+
+.row:nth-child(odd) {
+  background: #f7f7f7;
+}
+
+.row:hover {
+  border-color: #ee2211;
 }
 
 footer {
   display: flex;
   flex-direction: row;
+  width: 100vw;
   justify-content: center;
-  margin-top: 30px;
 }
