--- a/style.css
+++ b/style.css
@@ -1,153 +1,196 @@
 body {
-  font-family: Arial;
-  box-sizing: border-box;
-  background: #f7f7f7;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2rem;
-  height: 100vh;
-  width: 100vw;
-  margin: 0rem;
-  padding: 0rem;
-}
-
-body p {
-  font-size: 1.25rem;
-}
-
-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100vw;
-  gap: 2rem;
-  padding: 3rem 0rem;
-}
-
-nav ul {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: row;
-  gap: 1.5rem;
-  list-style: none;
-}
-
-nav ul li a {
-  display: block;
-  text-decoration: none;
-  text-transform: uppercase;
-  padding: 1rem 1.25rem;
-  color: #000;
-  border: 2px solid transparent;
-  border-radius: 0.25rem;
-}
-
-nav ul li a:hover {
-  border-color: #ee2211;
-}
-
-main {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  width: 80vw;
-  gap: 1.875rem;
+  gap: 60px;
+  justify-items: center;
+  margin-top: 60px;
+  background-color: #f7f7f7;
 }
 
-.box-01 {
-  align-self: center;
-}
-
-.box-01 p,
-h1 {
-  text-align: end;
-}
-
-.btn {
-  display: flex;
-  justify-content: end;
-}
-
-.box-01 a {
-  color: #fff;
-  background: #ee2211;
-  padding: 0.938rem 1.875rem;
-  border-radius: 0.25rem;
-  text-decoration: none;
-}
-
-.box-01 a:hover {
-  background: #900;
-  transition: 0.3s;
-}
-
-.box-02 {
-  position: relative;
-  align-self: center;
-}
-
-.box-02 img {
+img {
   max-width: 100%;
   display: block;
 }
 
-.box-02::before {
-  content: "";
+a {
+  text-decoration: none;
+}
+
+ul {
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+}
+
+p,
+h1,
+h2,
+h3 {
+  margin: 0px;
+}
+
+p {
+  font-size: 1.25rem;
+  line-height: 1.3;
+}
+
+.header {
+  display: grid;
+  gap: 60px;
+  justify-items: center;
+}
+
+.menu {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+
+.menu a {
   display: block;
-  width: 6rem;
-  height: 0.3rem;
-  left: -3rem;
-  top: 3rem;
-  background: red;
-  position: absolute;
-  z-index: 1;
-}
-
-.box-03 {
-  align-self: center;
-  text-align: end;
+  background: #ffffff;
+  padding: 1rem 2rem;
+  border-radius: 4px;
+  color: #000000;
   text-transform: uppercase;
+  border: 2px solid #fff;
+}
+
+.menu a:hover {
+  border-color: #e21;
+}
+
+.conteudo {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-width: 1000px;
+}
+
+.introducao {
+  background: #fff;
+  padding: 40px;
+  text-align: right;
+  position: relative;
+  display: grid;
+  gap: 20px;
+  align-content: center;
+  justify-items: end;
+}
+
+.introducao h1 {
+  font-size: 2rem;
+}
+
+.introducao::before {
+  content: "";
+  width: 60px;
+  height: 4px;
+  background: #e21;
+  position: absolute;
+  top: 30px;
+  right: -30px;
+}
+
+.introducao-cover img {
+  object-fit: cover;
+  height: 100%;
+}
+
+.botao {
+  background: #e21;
+  color: #fff;
+  padding: 1rem 2rem;
+  border-radius: 4px;
+  text-transform: uppercase;
+}
+
+.botao:hover {
+  background: #900;
+}
+
+.subtitulo {
   font-size: 4rem;
+  text-transform: uppercase;
   color: rgba(0, 0, 0, 0.2);
+  text-align: right;
+  padding: 40px;
+  align-self: center;
   background-image: url("./img/onda.svg");
+  /* word-break: break-all; */
 }
 
-.box-04 {
-  display: flex;
-  flex-direction: column;
-
-  /* background: lightcoral; */
-  padding: 0rem 14rem 0rem 4.5rem;
+.vantagens {
+  background: #fff;
+  padding: 40px;
 }
 
-.icon-descri {
-  display: flex;
-  gap: 1rem;
-  align-items: center;
-  flex-direction: row;
+.vantagens-item {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 10px 20px;
+  padding: 20px;
+  border-left: 4px solid transparent;
 }
 
-.icon-descri img {
-  height: 2.5rem;
-}
-
-.row {
-  border-left: 0.25rem solid transparent;
-  padding: 0rem 0rem 0rem 2rem;
-}
-
-.row:nth-child(odd) {
+.vantagens-item:nth-child(odd) {
   background: #f7f7f7;
 }
 
-.row:hover {
-  border-color: #ee2211;
+.vantagens-item:hover {
+  border-color: #e21;
 }
 
-footer {
-  display: flex;
-  flex-direction: row;
-  width: 100vw;
-  justify-content: center;
+.vantagens-item p {
+  grid-column: 2;
+}
+
+.rodape {
+  background: #fff;
+  width: 100%;
+  text-align: center;
+  padding: 40px;
+  box-sizing: border-box;
+}
+
+@media (max-width: 1000px) {
+  .conteudo-vantagem {
+    grid-template-columns: 1fr;
+  }
+  .subtitulo {
+    text-align: center;
+  }
+}
+
+@media (max-width: 600px) {
+  body {
+    gap: 30px;
+    margin-top: 20px;
+  }
+  .header {
+    gap: 30px;
+  }
+  .conteudo {
+    grid-template-columns: 1fr;
+  }
+  .introducao {
+    text-align: left;
+    justify-items: start;
+  }
+  .introducao::before {
+    display: none;
+  }
+  .subtitulo {
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .subtitulo {
+    font-size: 2rem;
+  }
+  p {
+    font-size: 1rem;
+  }
 }
